refactor: move default template to new `@jsdoc/template-legacy` package
Also switches to variable fonts and fixes a bug that prevented attributes like `static` from showing up in the docs.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,18 @@
   "private": true,
   "license": "Apache-2.0",
   "devDependencies": {
+    "@jsdoc/ast": "^0.1.0",
+    "@jsdoc/cli": "^0.2.10",
+    "@jsdoc/core": "^0.4.5",
+    "@jsdoc/doclet": "^0.1.1",
     "@jsdoc/eslint-config": "^1.0.8",
+    "@jsdoc/parse": "^0.1.6",
+    "@jsdoc/prettier-config": "^0.1.2",
+    "@jsdoc/salty": "^0.2.3",
+    "@jsdoc/tag": "^0.1.5",
+    "@jsdoc/task-runner": "^0.1.14",
     "@jsdoc/test-matchers": "^0.1.9",
+    "@jsdoc/util": "^0.2.8",
     "ajv": "^8.11.2",
     "c8": "^7.12.0",
     "eslint": "^8.28.0",
