--- a/packages/jsdoc-template-legacy/.npmignore
+++ b/packages/jsdoc-template-legacy/.npmignore
@@ -1,13 +1,18 @@
 .editorconfig
 .eslintignore
-.eslintrc.js
+.eslintrc*
 .gitignore
 .github/
+.license-check.json
+.license-header.txt
+.prettierignore
+.prettierrc*
 .renovaterc.json
-.travis.yml
 CHANGES.md
 CODE_OF_CONDUCT.md
 CONTRIBUTING.md
+Herebyfile*
+js-green-licenses.json
 lerna.json
 packages/
 test/
