--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "license-check-and-add": "^4.0.5",
     "lodash": "^4.17.21",
     "mock-fs": "^5.2.0",
-    "prettier": "^2.8.4",
-    "taffydb": "2.6.2"
+    "prettier": "^2.8.4"
   },
   "type": "module",
   "engines": {
