--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "format": "node_modules/.bin/hereby format",
     "license-check": "node_modules/.bin/hereby license-check",
     "license-headers": "node_modules/.bin/hereby license-headers",
-    "lint": "hereby lint",
-    "test": "hereby test"
+    "lint": "node_modules/.bin/hereby hereby lint",
+    "test": " node_modules/.bin/herebyhereby test"
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.21.8"
