--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@jsdoc/task-runner": "^0.2.0",
     "@jsdoc/test-matchers": "^0.2.0",
     "@jsdoc/util": "^0.3.0",
+    "@lerna/legacy-package-management": "^7.2.0",
     "ajv": "^8.12.0",
     "c8": "^7.14.0",
     "eslint": "^8.42.0",
@@ -28,7 +29,7 @@
     "jasmine-console-reporter": "^3.1.0",
     "js-green-licenses": "^4.0.0",
     "klaw-sync": "^6.0.0",
-    "lerna": "^6.6.2",
+    "lerna": "^7.2.0",
     "license-check-and-add": "^4.0.5",
     "lodash": "^4.17.21",
     "mock-fs": "^5.2.0",
