refactor: pass `DocletStore` to the template
Also fixes a bunch of breakage in the legacy template.

--- a/packages/jsdoc-template-legacy/package.json
+++ b/packages/jsdoc-template-legacy/package.json
@@ -13,7 +13,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@fontsource/open-sans": "^5.0.14",
+    "@fontsource-variable/open-sans": "^5.0.15",
     "@jsdoc/core": "^0.5.4",
     "@jsdoc/salty": "^0.2.5",
     "@jsdoc/tag": "^0.2.4",
