--- a/packages/jsdoc/package.json
+++ b/packages/jsdoc/package.json
@@ -18,8 +18,8 @@
     "@jsdoc/core": "^0.5.4",
     "@jsdoc/doclet": "^0.2.4",
     "@jsdoc/parse": "^0.3.4",
-    "@jsdoc/salty": "^0.2.5",
     "@jsdoc/tag": "^0.2.4",
+    "@jsdoc/template-legacy": "^0.1.4",
     "@jsdoc/util": "^0.3.0",
     "lodash": "^4.17.21",
     "strip-bom": "^5.0.0",
