--- a/packages/jsdoc-eslint-config/package.json
+++ b/packages/jsdoc-eslint-config/package.json
@@ -12,10 +12,13 @@
   "main": "index.js",
   "dependencies": {
     "@babel/eslint-parser": "^7.23.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0"
   },
   "peerDependencies": {
-    "eslint": ">= 8.54.0"
+    "eslint": ">= 8.54.0",
+    "prettier": ">= 3.1.0"
   },
   "publishConfig": {
     "access": "public"
