--- a/packages/jsdoc-tag/package.json
+++ b/packages/jsdoc-tag/package.json
@@ -39,7 +39,8 @@
     "@jsdoc/util": "^0.3.2",
     "catharsis": "^0.9.0",
     "common-path-prefix": "^3.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "memize": "^2.1.0"
   },
   "engines": {
     "node": ">=v18.12.0"
