chore: add minimum Node.js version to several packages

--- a/packages/jsdoc-doclet/package.json
+++ b/packages/jsdoc-doclet/package.json
@@ -38,5 +38,8 @@
     "lodash": "^4.17.21",
     "on-change": "^5.0.1",
     "strip-bom": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=v18.12.0"
   }
 }
