--- a/packages/jsdoc-parse/package.json
+++ b/packages/jsdoc-parse/package.json
@@ -19,6 +19,9 @@
     "@jsdoc/util": "^0.3.2",
     "escape-string-regexp": "^5.0.0"
   },
+  "engines": {
+    "node": ">=v18.12.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jsdoc/jsdoc.git"
