refactor: move tag initialization out of `runCommand()`

--- a/packages/jsdoc-core/package.json
+++ b/packages/jsdoc-core/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@jsdoc/doclet": "^0.2.10",
     "@jsdoc/parse": "^0.3.10",
+    "@jsdoc/tag": "^0.2.10",
     "cosmiconfig": "^9.0.0",
     "escape-string-regexp": "^5.0.0",
     "fast-glob": "^3.3.2",
