chore: add pre-commit hook to run linter and tests

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,8 +11,12 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+
 name: build
 on: [push, pull_request]
+env:
+  # Don't install Git hooks.
+  HUSKY: 0
 jobs:
   license-check:
     runs-on: ${{ matrix.os }}
