--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.57.0",
     "execa": "^8.0.1",
     "hereby": "^1.8.9",
+    "husky": "^9.0.11",
     "jasmine": "^5.1.0",
     "jasmine-console-reporter": "^3.1.0",
     "js-green-licenses": "^4.0.0",
@@ -43,6 +44,7 @@
     "license-check": "node_modules/.bin/hereby license-check",
     "license-headers": "node_modules/.bin/hereby license-headers",
     "lint": "node_modules/.bin/hereby lint",
+    "prepare": "node .husky/install.js",
     "test": "node_modules/.bin/hereby test"
   },
   "workspaces": [
