refactor: create `@jsdoc/name` package to break dependency cycles
Tons of stuff depends on these methods; in contrast, these methods don't depend on any other JSDoc packages.

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "packages/jsdoc-core",
     "packages/jsdoc-doclet",
     "packages/jsdoc-eslint-config",
+    "packages/jsdoc-name",
     "packages/jsdoc-parse",
     "packages/jsdoc-plugins",
     "packages/jsdoc-prettier-config",
