--- a/packages/jsdoc-tag/package.json
+++ b/packages/jsdoc-tag/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@jsdoc/ast": "^0.2.11",
-    "@jsdoc/core": "^0.5.8",
+    "@jsdoc/name": "^0.0.1",
     "@jsdoc/util": "^0.3.3",
     "catharsis": "^0.9.0",
     "common-path-prefix": "^3.0.0",
