--- a/packages/jsdoc-template-legacy/package.json
+++ b/packages/jsdoc-template-legacy/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@fontsource-variable/open-sans": "^5.1.0",
-    "@jsdoc/core": "^0.5.8",
+    "@jsdoc/name": "^0.0.1",
     "@jsdoc/salty": "^0.2.8",
     "@jsdoc/tag": "^0.2.11",
     "@jsdoc/util": "^0.3.3",
