--- a/packages/jsdoc-eslint-config/package.json
+++ b/packages/jsdoc-eslint-config/package.json
@@ -41,7 +41,7 @@
     }
   },
   "engines": {
-    "node": ">=v18.12.0"
+    "node": "^20.19.0 || ^22.12.0 || >=23.0.0"
   },
   "gitHead": "81a824eb0968851f836fc6069376d0337775f9ba"
 }
