--- a/packages/jsdoc-cli/package.json
+++ b/packages/jsdoc-cli/package.json
@@ -36,10 +36,10 @@
     "lodash": "^4.17.21",
     "ow": "^2.0.0",
     "strip-bom": "^5.0.0",
-    "yargs-parser": "^21.1.1"
+    "yargs-parser": "^22.0.0"
   },
   "engines": {
-    "node": ">=v18.12.0"
+    "node": "^20.19.0 || ^22.12.0 || >=23.0.0"
   },
   "gitHead": "a595f7f2a525f32da9a0498a027667af3d938158"
 }
