--- a/packages/jsdoc-parse/package.json
+++ b/packages/jsdoc-parse/package.json
@@ -20,7 +20,7 @@
     "escape-string-regexp": "^5.0.0"
   },
   "engines": {
-    "node": ">=v18.12.0"
+    "node": "^20.19.0 || ^22.12.0 || >=23.0.0"
   },
   "repository": {
     "type": "git",
