--- a/packages/jsdoc/package.json
+++ b/packages/jsdoc/package.json
@@ -2,7 +2,7 @@
   "name": "jsdoc",
   "private": true,
   "version": "5.0.0-dev.19",
-  "revision": "1667509813080",
+  "revision": "1748665787180",
   "description": "An API documentation generator for JavaScript.",
   "keywords": [
     "documentation",
@@ -26,7 +26,7 @@
     "strip-json-comments": "^5.0.2"
   },
   "engines": {
-    "node": ">=v18.12.0"
+    "node": "^20.19.0 || ^22.12.0 || >=23.0.0"
   },
   "type": "module",
   "bin": {
