--- a/package.json
+++ b/package.json
@@ -3,19 +3,10 @@
   "private": true,
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/eslint-parser": "7.28.4",
-    "@jsdoc/ast": "^0.2.5",
-    "@jsdoc/cli": "^0.3.5",
-    "@jsdoc/core": "^0.5.4",
-    "@jsdoc/doclet": "^0.2.5",
-    "@jsdoc/eslint-config": "^2.0.0",
-    "@jsdoc/parse": "^0.3.5",
-    "@jsdoc/prettier-config": "^0.2.3",
-    "@jsdoc/salty": "^0.2.5",
-    "@jsdoc/tag": "^0.2.5",
-    "@jsdoc/task-runner": "^0.2.2",
-    "@jsdoc/test-matchers": "^0.2.4",
-    "@jsdoc/util": "^0.3.0",
+    "@jsdoc/core": "^0.5.10",
+    "@jsdoc/eslint-config": "^2.0.2",
+    "@jsdoc/tag": "^0.2.13",
+    "@jsdoc/util": "^0.3.4",
     "ajv": "^8.17.1",
     "c8": "^10.1.3",
     "eslint": "^9.36.0",
@@ -26,7 +17,7 @@
     "jasmine": "^5.11.0",
     "jasmine-console-reporter": "^3.1.0",
     "js-green-licenses": "^4.0.0",
-    "klaw-sync": "^7.0.0",
+    "knip": "^5.64.1",
     "license-check-and-add": "^4.0.5",
     "lodash": "^4.17.21",
     "mock-fs": "^5.5.0",
@@ -40,6 +31,7 @@
     "coverage": "node_modules/.bin/hereby coverage",
     "default": "node_modules/.bin/hereby",
     "dependencies": "node_modules/.bin/hereby dependencies",
+    "dependency-cleanup": "node_modules/.bin/hereby dependency-cleanup",
     "dependency-engines": "node_modules/.bin/hereby dependency-engines",
     "dependency-licenses": "node_modules/.bin/hereby dependency-licenses",
     "format": "node_modules/.bin/hereby format",
